# aap-lv2-mda

./: .gitmodules  Makefile  README.md  build.gradle  gradle.properties  import-lv2-deps.sh  settings.gradle  setup-asan-for-debugging.sh
.github/workflows/: actions.yml
aap-mda-lv2/: CMakeLists.txt  build.gradle
aap-mda-lv2/src/androidTest/java/org/androidaudioplugin/aap_mda_lv2/: AudioPluginInterfaceTest.kt
aap-mda-lv2/src/main/: AndroidManifest.xml
aap-mda-lv2/src/main/cpp/: CMakeLists.txt
aap-mda-lv2/src/main/res/values/: strings.xml
aap-mda-lv2/src/main/res/xml/: aap_metadata.xml  midi_device_info.xml
app/: build.gradle
app/src/androidTest/java/org/androidaudioplugin/aap_mda_lv2/: MidiDeviceServiceTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/xml/: aap_metadata.xml  midi_device_info.xml  ump_device_info.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
